deploy/k8s/webhook/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: container-security
  labels:
    name: container-security
    container-security/enabled: "true"
    security: enabled
    purpose: admission-control
